--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"server": "json-server -d 750 -w -p 3333 ./server.js"
 	},
 	"dependencies": {
+		"json-server": "^0.17.0",
 		"next": "12.2.5",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
