--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "cross-env ANALYZE=true next build ",
 		"start": "next start",
 		"lint": "next lint",
 		"server": "json-server -d 750 -w -p 3333 ./server.js"
 	},
 	"dependencies": {
+		"@next/bundle-analyzer": "^12.2.5",
+		"@types/react-virtualized": "^9.21.21",
+		"cross-env": "^7.0.3",
 		"json-server": "^0.17.0",
 		"next": "12.2.5",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"react-virtualized": "^9.22.3"
 	},
 	"devDependencies": {
 		"@types/node": "18.7.14",
